Revert "Fixes overflow-x"
This reverts commit 303434e9d32ace8a2ab86f329b439d1d2a3b151f.

--- a/app/assets/stylesheets/pages/rj/2019.scss
+++ b/app/assets/stylesheets/pages/rj/2019.scss
@@ -11,10 +11,6 @@
   }
 }
 
-body.body-rj-2019 {
-  overflow-x: hidden;
-}
-
 @media only screen and (max-width: $mobile-width) {
   div[class^="brush-"] {
     display: none !important;
